tests/cases/parser/literals/non_hex_ascii_escape_code.stderr
error: invalid character in numeric escape sequence `h`
 --> $DIR/non_hex_ascii_escape_code.hash:3:9
2 |   
3 |   k := '\xhh';
  |           ^ `h` is not valid here
  = info: numeric escape sequences may only contain hexadecimal digits
